# frontpress-local

./: README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
design/FrontPress Icon.icon/: icon.json
docs/: editor.md  installation.md  php.md  syncing.md  websites.md
src/: App.css  App.tsx  api.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/examples/: genhash.rs
src-tauri/icons/: icon.icns
src-tauri/resources/: fp-local-login.php
src-tauri/src/: commands.rs  frontpress.rs  keychain.rs  lib.rs  main.rs  net.rs  paths.rs  php.rs  server.rs  siteops.rs  store.rs  util.rs
src/components/: CreateSiteModal.tsx  DuplicateModal.tsx  Modal.tsx  PhpSettingsModal.tsx  RestoreModal.tsx  SettingsModal.tsx  SiteCard.tsx  SiteList.tsx  UpdateBanner.tsx
src/lib/: useUpdater.ts
