[package]
name = "frontpress-local"
version = "1.1.0"
description = "FrontPress Local — run FrontPress Studio sites on your Mac"
authors = ["Marko Krstić"]
edition = "2021"

[lib]
name = "frontpress_local_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
futures-util = "0.3"
anyhow = "1"
zip = "2"
flate2 = "1"
tar = "0.4"
bcrypt = "0.15"
dirs = "5"
rand = "0.8"
once_cell = "1"

# Keychain backend is platform-specific.
[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3", features = ["apple-native"] }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3", features = ["windows-native"] }

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3", features = ["sync-secret-service"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
